--- a/AX6.config
+++ b/AX6.config
@@ -21,17 +21,16 @@ CONFIG_LUCI_LANG_zh_Hans=y
 CONFIG_PACKAGE_kmod-zram=y
 CONFIG_PACKAGE_zram-swap=y
 
-CONFIG_PACKAGE_ipv6helper=y
-CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
-CONFIG_PACKAGE_6in4=y
-CONFIG_PACKAGE_6rd=y
-CONFIG_PACKAGE_6to4=y
+# CONFIG_PACKAGE_ipv6helper=y
+# CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+# CONFIG_PACKAGE_6in4=y
+# CONFIG_PACKAGE_6rd=y
+# CONFIG_PACKAGE_6to4=y
 
 
 # CONFIG_PACKAGE_kmod-usb-core is not set
 # CONFIG_PACKAGE_kmod-usb-dwc3 is not set
 # CONFIG_PACKAGE_kmod-usb3 is not set
-
 
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
 
@@ -42,12 +41,11 @@ CONFIG_PACKAGE_luci-app-easymesh=y
 CONFIG_PACKAGE_luci-app-frpc=y
 CONFIG_PACKAGE_luci-app-frps=y
 
-CONFIG_PACKAGE_luci-app-guest-wifi=y
+# CONFIG_PACKAGE_luci-app-guest-wifi=y
 
+# CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
 
-CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
-
-CONFIG_PACKAGE_luci-app-jd-dailybonus=y
+# CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 
 CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-mwan3helper=y
@@ -71,7 +69,7 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Server=y
 
 CONFIG_PACKAGE_luci-app-pppoe-relay=y
 
-CONFIG_PACKAGE_luci-app-pptp-server=y
+# CONFIG_PACKAGE_luci-app-pptp-server=y
 
 CONFIG_PACKAGE_luci-app-pushbot=y
 
