--- a/.github/workflows/R2S.yml
+++ b/.github/workflows/R2S.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: R2S Almighty Edition
+name: R2S Edition
 
 on:
   repository_dispatch:
